[package]
name = "ioctl-sys"
version = "0.4.0"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "IO Control for POSIX-and-beyond systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmesmon/ioctl"
documentation = "https://cmr.github.io/ioctl"

[dependencies]
libc = "0.2"

[features]
unstable = []
