[package]
name = "ioctl-sys"
version = "0.5.2"
authors = ["Cody P Schafer <dev@codyps.com>", "Corey Richardson <corey@octayn.net>"]
description = "IO Control for POSIX-and-beyond systems (core fn & macros, see `ioctls` for many ioctl definitions)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmesmon/ioctl"
documentation = "https://docs.rs/ioctl-sys/0.5.2"
include = ["Cargo.toml", "**/*.rs"]

[dependencies]

[features]
unstable = []
